# iploc

./: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml  settings.py
src/: ipstack.py  schemas.py
tests/: conftest.py
tests/functional/: test_locate_ip.py
tests/unit/: conftest.py  test_ipstack_client.py
